# odara_site

./: .gitignore  App.tsx  COMMUNITY_BUG_FIXES.md  ODARA_COMMUNITY_FEATURES (1).md  ODARA_COMMUNITY_PLAN.md  PLAN_AUTH_FEATURES.md  PLAN_DOWNLOADS_DASHBOARD.md  README.md  constants.tsx  index.css  index.html  metadata.json  nginx-install-ps1.conf  package-lock.json  package.json  start.sh  stop.sh  tailwind.config.js  types.ts  vite.config.ts
backend/: Cargo.toml  migrate.py
backend/migrations/: 20260310000000_init.sql  20260310010000_community.sql  20260310020000_add_lead_fields.sql  20260316000000_community_users.sql  20260317000000_download_events.sql
backend/src/: admin.rs  auth.rs  community.rs  email.rs  leads.rs  main.rs  ratelimit.rs
components/: AIDemo.tsx  APISection.tsx  Audience.tsx  Comparison.tsx  Features.tsx  Footer.tsx  FreeTier.tsx  Hero.tsx  Layout.tsx  NodeExplorer.tsx  ProductShowcase.tsx  TechSpecs.tsx  Testimonials.tsx  TrustedBy.tsx  TutorialCard.tsx  TutorialReader.tsx  Tutorials.tsx  VideoModal.tsx
components/community/: AuthModal.tsx  CategoryTabs.tsx  CommunityPage.tsx  CommunityStats.tsx  PostCard.tsx  PostDetail.tsx  PostForm.tsx  ProfileModal.tsx  StatusBadge.tsx  api.ts  (+1 more)
contexts/: AuthContext.tsx
docs/: plan-testimonials-section.md
pages/: AdminDownloadsPage.tsx  AdminUsersPage.tsx  AuthCallbackPage.tsx  CommunityPage.tsx  DocsPage.tsx  DownloadPage.tsx  LandingPage.tsx  ResetPasswordPage.tsx  RevampPage.tsx  TutorialsPage.tsx  UploadPage.tsx
public/: install.ps1  install.sh  robots.txt  sitemap.xml
src/: App.tsx  index.css
(+51 files in other folders)
