[package]
name = "site-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
dotenvy = "0.15"
lettre = "0.11"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
